<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BirdGame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupMathSign">

            <TextView
                android:id="@+id/ScoreTextView"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="601"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/Score1_ImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="First Number"
                app:srcCompat="@drawable/star" />
            <ImageView
                android:id="@+id/Score2_ImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="First Number"
                app:srcCompat="@drawable/star" />
            <ImageView
                android:id="@+id/Score3_ImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="First Number"
                app:srcCompat="@drawable/star" />
            <ImageView
                android:id="@+id/Score4_ImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="First Number"
                app:srcCompat="@drawable/star" />
            <ImageView
                android:id="@+id/Score5_ImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="First Number"
                app:srcCompat="@drawable/star" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/BirdGameByName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClickedBirdGame"
                    android:text="@string/bird_game_play_by_name"
                    android:textSize="20sp"></RadioButton>
                <RadioButton android:id="@+id/BirdGameBySound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bird_game_play_by_sound"
                    android:textSize="20sp"
                    android:onClick="onRadioButtonClickedBirdGame">
                </RadioButton>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/bird_game_title_by_name"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/PicturePlaySoundAgain"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="false"
                    android:background="@android:color/black"
                    android:gravity="center"
                    android:onClick="playSoundAgain"
                    app:srcCompat="@drawable/speeker_say_again" />

                <TextView
                    android:id="@+id/TitlePressToHearAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/bird_game_play_sound_again"
                    android:onClick="playSoundAgain"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

        <TableLayout android:id="@+id/buttonTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stretchColumns="0,1">
            <TableRow android:id="@+id/tableRow0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Bird1ImageView"
                    android:layout_width="54dp"
                    android:layout_height="149dp"
                    android:gravity="center"
                    android:onClick="clickOnImageCheckResult"
                    app:srcCompat="@drawable/number1" />

                <ImageView
                    android:id="@+id/Bird2ImageView"
                    android:layout_width="54dp"
                    android:layout_height="149dp"
                    android:gravity="center"
                    android:onClick="clickOnImageCheckResult"
                    app:srcCompat="@drawable/number2" />
            </TableRow>
            <TableRow android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Bird3ImageView"
                    android:layout_width="54dp"
                    android:layout_height="149dp"
                    android:gravity="center"
                    android:onClick="clickOnImageCheckResult"
                    app:srcCompat="@drawable/number3" />

                <ImageView
                    android:id="@+id/Bird4ImageView"
                    android:layout_width="54dp"
                    android:layout_height="149dp"
                    android:gravity="center"
                    android:onClick="clickOnImageCheckResult"
                    app:srcCompat="@drawable/number4" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>